...
                        "redo" -> Icons.AutoMirrored.Filled.Redo to "重做"
                        "cut" -> Icons.Default.ContentCut to "剪切"
                        "copy" -> Icons.Default.ContentCopy to "复制"
                        "paste" -> Icons.Default.ContentPaste to "粘贴"
                        "home" -> Icons.Default.FirstPage to "段首"
                        "end" -> Icons.Default.LastPage to "段尾"
                        "up" -> Icons.Default.KeyboardArrowUp to "向上"
                        "down" -> Icons.Default.KeyboardArrowDown to "向下"
                        "left" -> Icons.Default.KeyboardArrowLeft to "向左"
                        "right" -> Icons.Default.KeyboardArrowRight to "向右"
                        "delete" -> Icons.AutoMirrored.Filled.Backspace to "删除"
                        "enter" -> Icons.AutoMirrored.Filled.KeyboardReturn to "回车"
                        "select_all" -> Icons.Default.SelectAll to "全选"
...
